--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="textContainer"></div>
 
     <script>
-        const BACKEND_URL = "https://your-backend.onrender.com"; // Replace with your actual backend URL
+        const BACKEND_URL = "https://datastoreapp.onrender.com"; // Replace with your actual backend URL
 
         document.getElementById('addBtn').addEventListener('click', () => {
             document.getElementById('inputContainer').style.display = 'block';
