--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         textarea { width: 80%; height: 100px; padding: 10px; }
         button { padding: 10px 15px; margin: 10px; cursor: pointer; }
         .note { background: #f4f4f4; padding: 10px; margin: 5px auto; width: 80%; 
-                border-left: 5px solid #007BFF; text-align: left; }
+                border-left: 5px solid #007BFF; text-align: left; display: flex; justify-content: space-between; align-items: center; }
+        .deleteBtn { background: red; color: white; border: none; padding: 5px 10px; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -27,7 +28,7 @@
     <div id="textContainer"></div>
 
     <script>
-        const BACKEND_URL = "https://datastoreapp.onrender.com"; // Replace with your Render backend URL
+        const BACKEND_URL = "https://datastoreapp.onrender.com"; // Replace with your actual backend URL
 
         document.getElementById('addBtn').addEventListener('click', () => {
             document.getElementById('inputContainer').style.display = 'block';
@@ -51,16 +52,34 @@
             .catch(error => console.error("Error:", error));
         }
 
+        function deleteText(index) {
+            fetch(`${BACKEND_URL}/${index}`, {
+                method: "DELETE"
+            })
+            .then(() => loadTexts())
+            .catch(error => console.error("Error:", error));
+        }
+
         function loadTexts() {
             document.getElementById("textContainer").innerHTML = "";
 
             fetch(BACKEND_URL)
             .then(response => response.json())
             .then(data => {
-                data.forEach(note => {
+                data.forEach((note, index) => {
                     let noteDiv = document.createElement("div");
                     noteDiv.className = "note";
-                    noteDiv.innerText = note;
+
+                    let noteText = document.createElement("span");
+                    noteText.innerText = note;
+
+                    let deleteBtn = document.createElement("button");
+                    deleteBtn.className = "deleteBtn";
+                    deleteBtn.innerText = "Delete";
+                    deleteBtn.onclick = () => deleteText(index);
+
+                    noteDiv.appendChild(noteText);
+                    noteDiv.appendChild(deleteBtn);
                     document.getElementById("textContainer").appendChild(noteDiv);
                 });
             })
