--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         textarea { width: 80%; height: 100px; padding: 10px; }
         button { padding: 10px 15px; margin: 10px; cursor: pointer; }
         .note { background: #f4f4f4; padding: 10px; margin: 5px auto; width: 80%; 
-                border-left: 5px solid #007BFF; text-align: left; display: flex; justify-content: space-between; align-items: center; }
-        .deleteBtn { background: red; color: white; border: none; padding: 5px 10px; cursor: pointer; }
+                border-left: 5px solid #007BFF; text-align: left; }
+        .visitor-box { background: #e8e8e8; padding: 10px; margin: 10px auto; width: 80%; text-align: left; }
     </style>
 </head>
 <body>
@@ -27,8 +27,12 @@
     <h3>Saved Texts:</h3>
     <div id="textContainer"></div>
 
+    <h3>Visitors:</h3>
+    <p id="visitorCount">Visitors: Loading...</p>
+    <div id="visitorList" class="visitor-box"></div>
+
     <script>
-        const BACKEND_URL = "https://datastoreapp.onrender.com"; // Replace with your actual backend URL
+        const BACKEND_URL = "https://your-backend-url.onrender.com"; // Replace with your actual backend URL
 
         document.getElementById('addBtn').addEventListener('click', () => {
             document.getElementById('inputContainer').style.display = 'block';
@@ -38,12 +42,11 @@
             let text = document.getElementById("userText").value;
             if (text.trim() === "") return alert("Text cannot be empty!");
 
-            fetch(BACKEND_URL, {
+            fetch(`${BACKEND_URL}/save`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ text: text })
             })
-            .then(response => response.json())
             .then(() => {
                 document.getElementById("userText").value = "";
                 document.getElementById("inputContainer").style.display = "none";
@@ -52,41 +55,36 @@
             .catch(error => console.error("Error:", error));
         }
 
-        function deleteText(index) {
-            fetch(`${BACKEND_URL}/${index}`, {
-                method: "DELETE"
-            })
-            .then(() => loadTexts())
-            .catch(error => console.error("Error:", error));
-        }
-
         function loadTexts() {
             document.getElementById("textContainer").innerHTML = "";
 
-            fetch(BACKEND_URL)
+            fetch(`${BACKEND_URL}/texts`)
             .then(response => response.json())
             .then(data => {
-                data.forEach((note, index) => {
+                data.forEach(note => {
                     let noteDiv = document.createElement("div");
                     noteDiv.className = "note";
-
-                    let noteText = document.createElement("span");
-                    noteText.innerText = note;
-
-                    let deleteBtn = document.createElement("button");
-                    deleteBtn.className = "deleteBtn";
-                    deleteBtn.innerText = "Delete";
-                    deleteBtn.onclick = () => deleteText(index);
-
-                    noteDiv.appendChild(noteText);
-                    noteDiv.appendChild(deleteBtn);
+                    noteDiv.innerText = note;
                     document.getElementById("textContainer").appendChild(noteDiv);
                 });
             })
             .catch(error => console.error("Error:", error));
         }
 
+        function loadVisitors() {
+            fetch(`${BACKEND_URL}/visit`);
+            
+            fetch(`${BACKEND_URL}/visitors`)
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("visitorCount").innerText = `Visitors: ${data.totalVisitors}`;
+                document.getElementById("visitorList").innerHTML = data.visitors.map(ip => `<p>${ip}</p>`).join("");
+            })
+            .catch(error => console.error("Error:", error));
+        }
+
         loadTexts();
+        loadVisitors();
     </script>
 </body>
 </html>
