--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="visitorList" class="visitor-box"></div>
 
     <script>
-        const BACKEND_URL = "https://your-backend-url.onrender.com"; // Replace with your actual backend URL
+        const BACKEND_URL = "https://datastoreapp.onrender.com"; // Replace with your actual backend URL
 
         document.getElementById('addBtn').addEventListener('click', () => {
             document.getElementById('inputContainer').style.display = 'block';
